Resolve js issues by collaboration

--- a/index.html
+++ b/index.html
@@ -1,37 +1,40 @@
 <DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Car Search</title>
-<link rel="stylesheet" type="text/css"  href="css/style.css" />
+    <html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <title>Car Search</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
 
 
-</head>    
+    </head>
 
-<body>
+    <body>
 
         <div class="container">
-        <h1>Car Search</h1>
+            <h1><strong><em>Car Search</em></strong></h1>
 
-         <!-- Cars will Get Dumped Dere  -->
-        <div id="cars-view"></div>
+            <!-- Cars will Get Dumped Dere  -->
 
-        <!-- Rendered Buttons will get Dumped Here  -->
-        <div id="buttons-view"></div>
 
-        <form id="cars-form">
-            <label for="cars-input">Add a Type of Car</label>
-            <input type="text" id="cars-input">
-            <br>
+            <!-- Rendered Buttons will get Dumped Here  -->
+            <div id="buttons-view"></div>
 
-            <!-- Button triggers new car to be added -->
-            <input id="add-cars" type="submit" value="Add a Type of Car">
-        </form>
+            <form id="cars-form">
+                <label for="cars-input"><em>Add a Type of Car</em></label>
+                <input type="text" id="cars-input">
+                <br>
+
+                <!-- Button triggers new car to be added -->
+                <input id="add-cars" type="submit" value="Add a Type of Car ">
+            </form>
+            <div id="cars-view"></div>
         </div>
 
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>    
-<script src="javascript/api2.js"></script>
-</body>
-</html>    
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="javascript/api2.js"></script>
+    </body>
+
+    </html>
